fixed dark mode moving position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2674,10 +2674,11 @@ body.dark-mode {
   background-color: var(--old-rose_30);
 }
 
-
-/**
-* Dark Mode
-*/
+/* Dark Mode Switch */
+.dark-mode .switch-container {
+  right: 14px;
+  top: 5px;
+}
 
 .dark-mode {
   --sonic-silver: #fff;
@@ -2786,6 +2787,11 @@ footer {
   top: 15px;
 }
 
+.light-mode .switch-container {
+  right: 14px;
+  top: 5px;
+}
+
 /* Hidden Checkbox */
 .switch-checkbox {
   display: none;
@@ -2872,7 +2878,7 @@ footer {
 
 }
 
-@media (min-width: 981px) {
+@media (min-width: 881px) {
   .navbar-list {
     flex-direction: column;
   }
